# hotel-booking

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docker/api/: Dockerfile
docker/db/: init.sql
src/api/: models.py  serializers.py  tests.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/hotel_booking/: config.py  settings.py  urls.py  views.py
src/tests/: test.py
